@@ -4,6 +4,8 @@ import static no.entur.uttu.graphql.GraphQLNames.FIELD_LINE_REF;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import no.entur.uttu.graphql.ArgumentWrapper;
 import no.entur.uttu.model.job.Export;
 import no.entur.uttu.model.job.ExportLineAssociation;
@@ -27,7 +29,7 @@ public class ExportLineAssociationMapper {
   }
 
   public List<ExportLineAssociation> mapList(List<Map<String, Object>> inputObjs) {
-    return inputObjs.stream().map(this::map).toList();
+    return inputObjs.stream().map(this::map).collect(Collectors.toList());
   }
 
   private ExportLineAssociation map(Map<String, Object> inputMap) {
